[package]
name = "mrt_state_to_state"
version = "0.1.0"
edition = "2024"

[dependencies]
bgpkit-parser = { version = "0.11.0", features = ["oneio"] }
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
